k8s/base/secure/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aura-secure
  labels:
    app.kubernetes.io/part-of: aura
    aura/version: secure
